add_subdirectory(Utils)
add_subdirectory(Minimath)
add_subdirectory(Modelconfig)
add_subdirectory(DebugTools)
add_subdirectory(Mesh)
add_subdirectory(Modelpars)
add_subdirectory(Ecosim_datatype)
add_subdirectory(APIData)
add_subdirectory(ModelDiags)
add_subdirectory(Disturbances)
add_subdirectory(Microbial_bgc)
add_subdirectory(Plant_bgc)
add_subdirectory(Geochem)
add_subdirectory(HydroTherm)
add_subdirectory(APIs)
add_subdirectory(IOutils)
add_subdirectory(Ecosim_mods)
add_subdirectory(Balances)
add_subdirectory(ATSUtils)
add_subdirectory(Modelforc)
add_subdirectory(Transport)
add_subdirectory(Main)

#message("ECOSIM_LIBRARIES ${ECOSIM_LIBRARIES}")
# Collect all the intermediate libraries
#set(LIBRARY_LIST subdir1_lib subdir2_lib subdir3_lib)

set(ECOSIM_LIBRARIES ${ECOSIM_LIBRARIES} PARENT_SCOPE)

# Combine the intermediate libraries into a single dynamic library
#add_library(ecosimff SHARED)
